reformat mobile view to prevent overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,7 @@
 body {
   margin: 0;
   min-height: 100vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   /* General styling for project */
@@ -127,7 +128,7 @@ main {
 }
 
 .content-box {
-  margin: 0 20px;
+  margin: 20px 20px;
 }
 
 .centered-button-container {
@@ -196,10 +197,11 @@ footer {
 @media screen and (min-width: 768px) {
   /*Header and items*/
   nav {
-    display: inline-block;
-    position: relative;
-    width: fit-content;
+    display: block;
+    position: static;
+    width: 100%;
     box-shadow: none;
+    /*0 2px 2px #f3a005*/
   }
 
   #menu {
@@ -245,8 +247,27 @@ footer {
 
     
   }
-  /*h1, h2, h3, p {margin: 0 50px 0 100px;}
-  If mobile view is really messed up, to continue
+  
 }*/
 
 /* Media query ends here */
+
+
+/* Media query for iPads */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+   header {width: 100%;
+   padding: 0;
+   
+   top: 5.5rem; /* Adjust top position */
+   overflow: hidden;
+ }
+
+ nav {
+    width: 100%;
+    padding: 0;
+    box-shadow: 0 2px 2px #728de8;
+    top: 5.5rem; /* Adjust top position */
+  }
+
+  /*h1, h2, h3, p {margin: 0 50px 0 100px;}
+  If mobile view is really messed up, to continue
